[tool.poetry]
name = "PyListenerTool"
version = "1.0.0"
description = "A lightweight and powerful event listener system for Python classes with built-in documentation generation support. Easily add event-driven programming patterns to your Python classes with decorators and automatic documentation."
authors = ["qiufeng <appleidqiufeng@outlook.com>"]
readme = "README.md"
license = "MIT"
keywords = [
    "event-driven",
    "listener",
    "observer-pattern",
    "event-bus",
    "decorator",
    "python3",
    "async",
    "documentation",
    "event-handler",
    "pub-sub",
    "python-decorators",
    "event-system",
    "python-library",
    "async-programming",
    "design-patterns",
    "event-management",
    "callback",
    "event-documentation",
    "auto-docs",
    "threading"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Homepage" = "https://github.com/qiufengcute/Listener"
"Repository" = "https://github.com/qiufengcute/Listener"
"Changelog" = "https://github.com/qiufengcute/Listener/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"